Fix spacing in agency preview contact info

--- a/www.foia.gov/_sass/modules/_agency_preview.scss
+++ b/www.foia.gov/_sass/modules/_agency_preview.scss
@@ -27,6 +27,10 @@
   list-style: none;
 }
 
+.agency-preview_contact-section {
+  margin-bottom: $space-2x;
+}
+
 .agency-preview_list-hed {
   @extend %h2;
 }
